[package]
name = "peerboard"
version = "0.1.0"
edition = "2024"

[dependencies]
libp2p = { version = "0.54", features = [
    "tcp",
    "quic",
    "noise",
    "yamux",
    "gossipsub",
    "macros",
    "rendezvous",
    "identify",
    "tokio",
    "kad"
] }
tokio = { version = "1", features = ["full"] }
prost = "0.12"
prost-types = "0.12"
uuid = { version = "1", features = ["v4"] }
rusqlite = "0.31"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1.89"
futures = "0.3.32"
clap = { version = "4.6.1", features = ["derive"] }

[build-dependencies]
prost-build = "0.12.6"